Openshift/templates/mitzicom_headlessservice_template.yaml
apiVersion: v1
kind: Template
labels:
  template: mitzicom-headlessservice-template
metadata:
  name: mitzicom-headlessservice-template
objects:
- kind: Service
  apiVersion: v1
  metadata:
    name: "mongodb-internal"
    labels:
      name: "mongodb"
    annotations:
      service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  spec:
    clusterIP: None
    ports:
      - name: mongodb
        port: 27017
    selector:
      name: "mongodb"
- kind: Service
  apiVersion: v1
  metadata:
    name: "mongodb"
    labels:
      name: "mongodb"
  spec:
    ports:
      - name: mongodb
        port: 27017
    selector:
      name: "mongodb"
