Openshift/templates/mitzicom_nexus_template copy.yaml
apiVersion: v1
kind: Template
metadata:
  creationTimestamp: null
  name: jmk_nexus_template
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: nexus3
    name: nexus3
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: nexus3
      deploymentconfig: nexus3
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: nexus3
          deploymentconfig: nexus3
      spec:
        containers:
        - image: sonatype/nexus3@sha256:32e7affbdbb8e0a96572ec902dd38b4193e68f752edd20cd38ee359df91d81e0
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
              - echo
              - ok
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nexus3
          ports:
          - containerPort: 8081
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /repository/maven-public/
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /nexus-data
            name: nexus3-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: nexus3-volume-1
          persistentVolumeClaim:
            claimName: nexus-pvc
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - nexus3
        from:
          kind: ImageStreamTag
          name: nexus3:latest
          namespace: jmk-xyz-nexus
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: 2018-05-22T10:15:33Z
    creationTimestamp: null
    generation: 2
    labels:
      app: nexus3
    name: nexus3
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: sonatype/nexus3:latest
      from:
        kind: DockerImage
        name: docker-registry.default.svc:5000/jmk-xyz-nexus/nexus3:latest
      generation: 2
      importPolicy: {}
      name: latest
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: nexus3
    name: nexus-registry
  spec:
    host: nexus-registry-jmk-xyz-nexus.apps.bcn.example.opentlc.com
    port:
      targetPort: 5000
    tls:
      termination: edge
    to:
      kind: Service
      name: nexus-registry
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2018-05-22T10:37:51Z
        status: "True"
        type: Admitted
      host: nexus-registry-jmk-xyz-nexus.apps.bcn.example.opentlc.com
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: nexus3
    name: nexus3
  spec:
    host: nexus3-jmk-xyz-nexus.apps.bcn.example.opentlc.com
    port:
      targetPort: 8081-tcp
    to:
      kind: Service
      name: nexus3
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2018-05-22T10:18:13Z
        status: "True"
        type: Admitted
      host: nexus3-jmk-xyz-nexus.apps.bcn.example.opentlc.com
      routerName: router
      wildcardPolicy: None
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu request for container
        nexus3; cpu limit for container nexus3'
      openshift.io/deployment-config.latest-version: "2"
      openshift.io/deployment-config.name: nexus3
      openshift.io/deployment.name: nexus3-2
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: null
    generateName: nexus3-2-
    labels:
      app: nexus3
      deployment: nexus3-2
      deploymentconfig: nexus3
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: nexus3-2
      uid: f5b64b5a-5daa-11e8-89f7-02498bc7f084
  spec:
    containers:
    - image: sonatype/nexus3@sha256:32e7affbdbb8e0a96572ec902dd38b4193e68f752edd20cd38ee359df91d81e0
      imagePullPolicy: Always
      livenessProbe:
        exec:
          command:
          - echo
          - ok
        failureThreshold: 3
        initialDelaySeconds: 60
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      name: nexus3
      ports:
      - containerPort: 8081
        protocol: TCP
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /repository/maven-public/
          port: 8081
          scheme: HTTP
        initialDelaySeconds: 60
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      resources:
        limits:
          cpu: 500m
          memory: 2Gi
        requests:
          cpu: 50m
          memory: 1Gi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1000550000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /nexus-data
        name: nexus3-volume-1
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: default-token-jkdn5
        readOnly: true
    dnsPolicy: ClusterFirst
    imagePullSecrets:
    - name: default-dockercfg-l4mcv
    nodeName: node2.bcn.internal
    nodeSelector:
      env: users
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1000550000
      seLinuxOptions:
        level: s0:c23,c22
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    volumes:
    - name: nexus3-volume-1
      persistentVolumeClaim:
        claimName: nexus-pvc
    - name: default-token-jkdn5
      secret:
        defaultMode: 420
        secretName: default-token-jkdn5
  status:
    phase: Pending
    qosClass: Burstable
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2018-05-22 10:15:57 +0000 UTC
      openshift.io/deployer-pod.created-at: 2018-05-22 10:15:33 +0000 UTC
      openshift.io/deployer-pod.name: nexus3-1-deploy
      openshift.io/deployment-config.latest-version: "1"
      openshift.io/deployment-config.name: nexus3
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"nexus3","namespace":"jmk-xyz-nexus","selfLink":"/apis/apps.openshift.io/v1/namespaces/jmk-xyz-nexus/deploymentconfigs/nexus3","uid":"0fa4490b-5da9-11e8-89f7-02498bc7f084","resourceVersion":"418079","generation":2,"creationTimestamp":"2018-05-22T10:15:32Z","labels":{"app":"nexus3"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Rolling","rollingParams":{"updatePeriodSeconds":1,"int [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: nexus3
      openshift.io/deployment-config.name: nexus3
    name: nexus3-1
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: nexus3
      uid: 0fa4490b-5da9-11e8-89f7-02498bc7f084
  spec:
    replicas: 0
    selector:
      app: nexus3
      deployment: nexus3-1
      deploymentconfig: nexus3
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "1"
          openshift.io/deployment-config.name: nexus3
          openshift.io/deployment.name: nexus3-1
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: nexus3
          deployment: nexus3-1
          deploymentconfig: nexus3
      spec:
        containers:
        - image: sonatype/nexus3@sha256:32e7affbdbb8e0a96572ec902dd38b4193e68f752edd20cd38ee359df91d81e0
          imagePullPolicy: Always
          name: nexus3
          ports:
          - containerPort: 8081
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /nexus-data
            name: nexus3-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: nexus3-volume-1
  status:
    replicas: 0
- apiVersion: v1
  kind: ReplicationController
  metadata:
    annotations:
      openshift.io/deployer-pod.completed-at: 2018-05-22 10:34:08 +0000 UTC
      openshift.io/deployer-pod.created-at: 2018-05-22 10:29:08 +0000 UTC
      openshift.io/deployer-pod.name: nexus3-2-deploy
      openshift.io/deployment-config.latest-version: "2"
      openshift.io/deployment-config.name: nexus3
      openshift.io/deployment.phase: Complete
      openshift.io/deployment.replicas: "1"
      openshift.io/deployment.status-reason: config change
      openshift.io/encoded-deployment-config: |
        {"kind":"DeploymentConfig","apiVersion":"v1","metadata":{"name":"nexus3","namespace":"jmk-xyz-nexus","selfLink":"/apis/apps.openshift.io/v1/namespaces/jmk-xyz-nexus/deploymentconfigs/nexus3","uid":"0fa4490b-5da9-11e8-89f7-02498bc7f084","resourceVersion":"421495","generation":9,"creationTimestamp":"2018-05-22T10:15:32Z","labels":{"app":"nexus3"},"annotations":{"openshift.io/generated-by":"OpenShiftNewApp"}},"spec":{"strategy":{"type":"Recreate","recreateParams":{"timeoutSeconds":600},"rol [...]
    creationTimestamp: null
    generation: 1
    labels:
      app: nexus3
      openshift.io/deployment-config.name: nexus3
    name: nexus3-2
    ownerReferences:
    - apiVersion: apps.openshift.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: DeploymentConfig
      name: nexus3
      uid: 0fa4490b-5da9-11e8-89f7-02498bc7f084
  spec:
    replicas: 1
    selector:
      app: nexus3
      deployment: nexus3-2
      deploymentconfig: nexus3
    template:
      metadata:
        annotations:
          openshift.io/deployment-config.latest-version: "2"
          openshift.io/deployment-config.name: nexus3
          openshift.io/deployment.name: nexus3-2
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: nexus3
          deployment: nexus3-2
          deploymentconfig: nexus3
      spec:
        containers:
        - image: sonatype/nexus3@sha256:32e7affbdbb8e0a96572ec902dd38b4193e68f752edd20cd38ee359df91d81e0
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
              - echo
              - ok
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nexus3
          ports:
          - containerPort: 8081
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /repository/maven-public/
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 1Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /nexus-data
            name: nexus3-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: nexus3-volume-1
          persistentVolumeClaim:
            claimName: nexus-pvc
  status:
    replicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: nexus3
    name: nexus-registry
  spec:
    ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      app: nexus3
      deploymentconfig: nexus3
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: nexus3
    name: nexus3
  spec:
    ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
    selector:
      app: nexus3
      deploymentconfig: nexus3
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
